# Working_with_Conan

./: .gitignore
Installing_and_Building_FFmpeg/: CMakeLists.txt  conanfile.py
Installing_and_Building_FFmpeg/src/: frame_to_image.cpp
Installing_and_Building_ZLIB/: CMakeLists.txt
consume_hello_package_from_artifactory/: CMakeLists.txt  conanfile.py
consume_hello_package_from_artifactory/src/: main.cpp
